--- a/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewAbandon.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewAbandon.html
@@ -311,6 +311,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Log out</td>
 	<td></td>
@@ -378,6 +383,11 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Your dashboard is empty. There are no tasks that require your intervention.</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
 	<td></td>
 </tr>
 <tr>
@@ -585,6 +595,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>lastdocuments</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=testNote1</td>
 	<td></td>
@@ -709,6 +729,16 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Your dashboard is empty</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>lastdocuments</td>
 	<td></td>
 </tr>
 <tr>
