--- a/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewAddReviewers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewAddReviewers.html
@@ -144,7 +144,7 @@
 </tr>
 <tr>
 	<td>selectFrameForOpenSocial</td>
-	<td>tasks</td>
+	<td>lastdocuments</td>
 	<td></td>
 </tr>
 <tr>
@@ -215,7 +215,7 @@
 </tr>
 <tr>
 	<td>selectFrameForOpenSocial</td>
-	<td>tasks</td>
+	<td>waitingfor</td>
 	<td></td>
 </tr>
 <tr>
@@ -835,6 +835,16 @@
 <tr>
 	<td>verifyTextPresent</td>
 	<td>Your dashboard is empty</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>lastdocuments</td>
 	<td></td>
 </tr>
 <tr>
