--- a/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewNoAddReviewers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewNoAddReviewers.html
@@ -383,8 +383,23 @@
 	<td>60000</td>
 </tr>
 <tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Your dashboard is empty</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>lastdocuments</td>
 	<td></td>
 </tr>
 <tr>
@@ -449,8 +464,23 @@
 	<td>60000</td>
 </tr>
 <tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Your dashboard is empty</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>lastdocuments</td>
 	<td></td>
 </tr>
 <tr>
@@ -515,8 +545,23 @@
 	<td>60000</td>
 </tr>
 <tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Your dashboard is empty</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>lastdocuments</td>
 	<td></td>
 </tr>
 <tr>
@@ -579,6 +624,11 @@
 	<td>waitForOpensocialGadgetsToLoad</td>
 	<td>content</td>
 	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>waitingfor</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -649,8 +699,23 @@
 	<td>60000</td>
 </tr>
 <tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Your dashboard is empty</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>lastdocuments</td>
 	<td></td>
 </tr>
 <tr>
