--- a/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewOK.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewOK.html
@@ -376,6 +376,11 @@
 	<td>60000</td>
 </tr>
 <tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=testNote1</td>
 	<td></td>
@@ -425,6 +430,11 @@
 	<td>waitForOpensocialGadgetsToLoad</td>
 	<td>content</td>
 	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -498,6 +508,11 @@
 	<td>60000</td>
 </tr>
 <tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=testNote1</td>
 	<td></td>
@@ -552,6 +567,11 @@
 	<td>waitForOpensocialGadgetsToLoad</td>
 	<td>content</td>
 	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>lastdocuments</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
