--- a/nuxeo-distribution-dm/ftest/selenium/tests/approveCommentOnTopicWithModeration.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/approveCommentOnTopicWithModeration.html
@@ -58,6 +58,11 @@
 	<td>60000</td>
 </tr>
 <tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Moderate the document</td>
 	<td></td>
