--- a/nuxeo-distribution-dm/ftest/selenium/tests/parallelReviewNoAddReviewers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/parallelReviewNoAddReviewers.html
@@ -348,18 +348,18 @@
 	<td></td>
 </tr>
 <tr>
+	<td>verifyTextNotPresent</td>
+	<td>Parallel comment for jsmith</td>
+	<td></td>
+</tr>
+<tr>
 	<td>selectWindow</td>
 	<td>null</td>
 	<td></td>
 </tr>
 <tr>
 	<td>selectFrameForOpenSocial</td>
-	<td>tasks</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextNotPresent</td>
-	<td>Parallel comment for jsmith</td>
+	<td>lastdocuments</td>
 	<td></td>
 </tr>
 <tr>
@@ -426,6 +426,16 @@
 <tr>
 	<td>verifyTextNotPresent</td>
 	<td>Parallel comment for bree</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>lastdocuments</td>
 	<td></td>
 </tr>
 <tr>
