--- a/nuxeo-distribution-dm/ftest/selenium/tests/publication/multipleVersionPublication.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/publication/multipleVersionPublication.html
@@ -377,6 +377,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Publish document</td>
 	<td></td>
@@ -407,7 +417,7 @@
 	<td></td>
 </tr>
 <!-- NXBT-247: selenium bug: disabled -->
-<!-- 
+<!--
 <tr>
 	<td>verifyTextNotPresent</td>
 	<td>0.1</td>
@@ -420,8 +430,23 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Your dashboard is empty. There are no tasks that require your intervention.</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
 	<td></td>
 </tr>
 <tr>
@@ -460,7 +485,7 @@
 	<td></td>
 </tr>
 <!-- NXBT-247: selenium bug: disabled -->
-<!-- 
+<!--
 <tr>
 	<td>verifyTextNotPresent</td>
 	<td>0.1</td>
@@ -938,6 +963,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Publish document</td>
 	<td></td>
@@ -1013,7 +1048,7 @@
 	<td></td>
 </tr>
 <!-- NXBT-247: selenium bug: disabled -->
-<!-- 
+<!--
 <tr>
 	<td>verifyTextNotPresent</td>
 	<td>0.1</td>
@@ -1031,7 +1066,7 @@
 	<td></td>
 </tr>
 <!-- NXBT-247: selenium bug: disabled -->
-<!-- 
+<!--
 <tr>
 	<td>verifyTextNotPresent</td>
 	<td>0.1</td>
@@ -1044,8 +1079,23 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Your dashboard is empty. There are no tasks that require your intervention.</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
 	<td></td>
 </tr>
 <tr>
@@ -1084,7 +1134,7 @@
 	<td></td>
 </tr>
 <!-- NXBT-247: selenium bug: disabled -->
-<!-- 
+<!--
 <tr>
 	<td>verifyTextNotPresent</td>
 	<td>0.1</td>
