--- a/nuxeo-distribution-dm/ftest/selenium/tests/suite-dm.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/suite-dm.html
@@ -11,7 +11,16 @@
       <td><b>Nuxeo DM Test Suite</b></td>
     </tr>
     <tr>
-      <td><a href="./opensocial/testOpensocialDashboard.html">testOpensocialDashboard</a></td>
+      <td><a href="./cancelNote.html">cancelNote</a></td>
+    </tr>
+    <tr>
+      <td><a href="./createNote.html">createNote</a></td>
+    </tr>
+    <tr>
+      <td><a href="./modifyNote.html">modifyNote</a></td>
+    </tr>
+    <tr>
+      <td><a href="./verifyCoverageNavigation.html">verifyCoverageNavigation</a></td>
     </tr>
   </tbody>
 </table>
