--- a/nuxeo-distribution-dm/ftest/selenium/tests/publication/publishingApprovalBySectionWriter.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/publication/publishingApprovalBySectionWriter.html
@@ -54,6 +54,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextNotPresent</td>
 	<td>Your dashboard is empty.</td>
 	<td></td>
@@ -86,8 +96,23 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Your dashboard is empty.</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectWindow</td>
+	<td>null</td>
 	<td></td>
 </tr>
 <tr>
