--- a/nuxeo-distribution-dm/ftest/selenium/tests/rejectCommentOnTopicWithModeration.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/rejectCommentOnTopicWithModeration.html
@@ -58,6 +58,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
+	<td>selectFrameForOpenSocial</td>
+	<td>tasks</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Moderate the document</td>
 	<td></td>
