NXP-6706: change create and edit pages buttons into actions => follow id change

--- a/nuxeo-distribution-dm/ftest/selenium/tests/testMultipleDomainsDashboard.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/testMultipleDomainsDashboard.html
@@ -163,7 +163,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>document_create:button_create</td>
+	<td>document_create:create_doc_CREATE_DOCUMENT</td>
 	<td></td>
 </tr>
 <tr>
@@ -183,7 +183,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>document_create:button_create</td>
+	<td>document_create:create_doc_CREATE_DOCUMENT</td>
 	<td></td>
 </tr>
 <tr>
