--- a/nuxeo-distribution-dm/ftest/selenium/tests/webSite/createTestContextualLink.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/webSite/createTestContextualLink.html
@@ -70,7 +70,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//*[@id=&quot;document_create:button_create&quot;]</td>
+	<td>//*[@id=&quot;document_create:create_doc_CREATE_DOCUMENT&quot;]</td>
 	<td></td>
 </tr>
 <tr>
