--- a/nuxeo-distribution-dm/ftest/selenium/tests/webSite/createTestWebWorkspace.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/webSite/createTestWebWorkspace.html
@@ -55,7 +55,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>document_create:button_create</td>
+	<td>document_create:create_doc_CREATE_DOCUMENT</td>
 	<td></td>
 </tr>
 
