--- a/nuxeo-distribution-dm/ftest/selenium/tests/publication/multipleVersionPublication.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/publication/multipleVersionPublication.html
@@ -68,7 +68,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>document_create:button_create</td>
+	<td>document_create:create_doc_CREATE_DOCUMENT</td>
 	<td></td>
 </tr>
 <tr>
@@ -629,7 +629,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>document_create:button_create</td>
+	<td>document_create:create_doc_CREATE_DOCUMENT</td>
 	<td></td>
 </tr>
 <tr>
