--- a/nuxeo-distribution-dm/ftest/selenium/tests/testAdvancedSearch.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/testAdvancedSearch.html
@@ -70,7 +70,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>document_create:button_create</td>
+	<td>document_create:create_doc_CREATE_DOCUMENT</td>
 	<td></td>
 </tr>
 <tr>
