NXP-6226: use currentDocument instead of changeableDocument

--- a/nuxeo-platform-localconfiguration-web/src/main/resources/web/nuxeo.war/incl/tabs/ui_types_configuration.xhtml
+++ b/nuxeo-platform-localconfiguration-web/src/main/resources/web/nuxeo.war/incl/tabs/ui_types_configuration.xhtml
@@ -8,6 +8,6 @@
   id="typesConfigurationView">
 
   <nxl:layout name="ui_types_configuration" mode="edit"
-        value="#{changeableDocument}"/>
+        value="#{currentDocument}"/>
 
 </f:subview>
