NXP-6706: add action confirm on creation and edition forms

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/create_document.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/create_document.xhtml
@@ -30,6 +30,7 @@
           <c:forEach var="action" items="#{actions}">
             <nxh:commandButton action="#{action.getLink()}"
               immediate="#{action.immediate}"
+              onclick="#{action.confirm}"
               id="create_doc_#{action.id}"
               value="#{messages[action.label]}"
               styleClass="button" />
