--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tabs/document_edit.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/tabs/document_edit.xhtml
@@ -33,6 +33,7 @@
       <c:forEach var="action" items="#{actions}">
         <nxh:commandButton action="#{action.getLink()}"
           immediate="#{action.immediate}"
+          onclick="#{action.confirm}"
           id="edit_doc_#{action.id}"
           value="#{messages[action.label]}"
           styleClass="button" />
