fixing a failing test caused by modifications in NXP-6706

--- a/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createWorkspace.html
+++ b/nuxeo-platform-signature-distribution/ftest/selenium/tests/signature/createWorkspace.html
@@ -63,7 +63,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>document_create:button_create</td>
+	<td>document_create:create_doc_CREATE_WORKSPACE</td>
 	<td></td>
 </tr>
 <tr>
