NXP-6719: handle immediate actions

--- a/nuxeo-platform-smart-query-jsf/src/main/resources/web/nuxeo.war/search/smart_search_results.xhtml
+++ b/nuxeo-platform-smart-query-jsf/src/main/resources/web/nuxeo.war/search/smart_search_results.xhtml
@@ -33,7 +33,7 @@
               <nxh:commandButton action="#{action.getLink()}"
                 value="#{messages[action.label]}"
                 id="smartSearchActionsButton_#{status.index}"
-                immediate="true"
+                immediate="#{action.immediate}"
                 styleClass="button" />
             </c:forEach>
           </nxu:set>
