NXP-6736: update error web now that user dashboard is in user center

--- a/ftest/selenium/tests/testErrorPage.html
+++ b/ftest/selenium/tests/testErrorPage.html
@@ -27,6 +27,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Go to error page</td>
 	<td></td>
@@ -77,6 +82,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Go to error page</td>
 	<td></td>
@@ -97,6 +107,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
 	<td>verifyElementPresent</td>
 	<td>link=change username</td>
 	<td></td>
@@ -115,6 +130,11 @@
 	<td>clickAndWait</td>
 	<td>link=back</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -162,6 +182,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Go to error page</td>
 	<td></td>
@@ -205,6 +230,11 @@
 	<td>clickAndWait</td>
 	<td>link=back</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -252,6 +282,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Go to error page</td>
 	<td></td>
@@ -295,6 +330,11 @@
 	<td>clickAndWait</td>
 	<td>link=back</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -342,6 +382,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Go to error page</td>
 	<td></td>
@@ -375,6 +420,11 @@
 	<td>clickAndWait</td>
 	<td>link=back</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -412,6 +462,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Go to error page</td>
 	<td></td>
@@ -445,6 +500,11 @@
 	<td>clickAndWait</td>
 	<td>link=back</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -482,6 +542,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Go to error page</td>
 	<td></td>
@@ -515,6 +580,11 @@
 	<td>clickAndWait</td>
 	<td>link=back</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
