--- a/ftest/selenium/tests/setupSecurityRestrictions.html
+++ b/ftest/selenium/tests/setupSecurityRestrictions.html
@@ -27,6 +27,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
 	<td>verifyElementPresent</td>
 	<td>link=Log in</td>
 	<td></td>
