--- a/ftest/selenium/tests/testNavigateSecurityError.html
+++ b/ftest/selenium/tests/testNavigateSecurityError.html
@@ -157,6 +157,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForOpensocialGadgetsToLoad</td>
+	<td>content</td>
+	<td>60000</td>
+</tr>
+<tr>
 	<td>verifyTextNotPresent</td>
 	<td>Unauthorized user</td>
 	<td></td>
