--- a/nuxeo-distribution-dm/ftest/selenium/tests/parallelReviewAbandon.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/parallelReviewAbandon.html
@@ -342,6 +342,16 @@
 	<td></td>
 </tr>
 <tr>
+  <td>storeEval</td>
+  <td>selenium.browserbot.getCurrentWindow().document.body.innerHTML</td>
+  <td>innerhtml</td>
+</tr>
+<tr>
+  <td>echo</td>
+  <td>${innerhtml}</td>
+  <td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
 	<td>Parallel comment for jsmith</td>
 	<td></td>
