NXP-6413: try to wait for an other element id

--- a/nuxeo-distribution-dm/ftest/selenium/tests/answerToCommentOnTopicWithoutModeration.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/answerToCommentOnTopicWithoutModeration.html
@@ -71,7 +71,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -122,7 +122,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
