--- a/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewAddReviewers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewAddReviewers.html
@@ -139,7 +139,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -210,7 +210,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -353,7 +353,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -501,7 +501,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -644,7 +644,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -824,7 +824,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
