--- a/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewNoAddReviewers.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/approbationReviewNoAddReviewers.html
@@ -379,7 +379,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -460,7 +460,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -541,7 +541,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -622,7 +622,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -695,7 +695,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
