--- a/nuxeo-distribution-dm/ftest/selenium/tests/publication/multipleVersionPublication.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/publication/multipleVersionPublication.html
@@ -378,7 +378,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -431,7 +431,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -964,7 +964,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -1080,7 +1080,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
