--- a/nuxeo-distribution-dm/ftest/selenium/tests/taskOnDeletedDocument.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/taskOnDeletedDocument.html
@@ -257,7 +257,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -324,7 +324,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -395,7 +395,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -450,7 +450,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -581,7 +581,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -631,7 +631,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
