--- a/nuxeo-distribution-dm/ftest/selenium/tests/opensocial/testOpensocialDashboard.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/opensocial/testOpensocialDashboard.html
@@ -48,7 +48,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
