--- a/nuxeo-distribution-dm/ftest/selenium/tests/publication/publishingRejectBySectionWriter.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/publication/publishingRejectBySectionWriter.html
@@ -55,7 +55,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
@@ -123,7 +123,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
