--- a/nuxeo-distribution-dm/ftest/selenium/tests/rejectCommentOnTopicWithModeration.html
+++ b/nuxeo-distribution-dm/ftest/selenium/tests/rejectCommentOnTopicWithModeration.html
@@ -59,7 +59,7 @@
 </tr>
 <tr>
 	<td>waitForOpensocialGadgetsToLoad</td>
-	<td>content</td>
+	<td>nxDocumentListData</td>
 	<td>60000</td>
 </tr>
 <tr>
