--- a/nuxeo-user-center/src/main/resources/web/nuxeo.war/incl/logo_DM_galaxy_user_center.xhtml
+++ b/nuxeo-user-center/src/main/resources/web/nuxeo.war/incl/logo_DM_galaxy_user_center.xhtml
@@ -6,7 +6,7 @@
   <div>
     <h:form>
       <h:commandLink action="#{adminViews.exit()}">
-        <h:graphicImage value="/img/nuxeo_user_logo.png" alt="Nuxeo User Center" width="229" height="36" />
+        <h:graphicImage value="/img/nuxeo_home_logo.png" alt="Nuxeo Home" width="183" height="36" />
       </h:commandLink>
     </h:form>
   </div>
