--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/user_clipboard.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/user_clipboard.xhtml
@@ -7,7 +7,7 @@
   xmlns:nxh="http://nuxeo.org/nxweb/html"
   xmlns:nxu="http://nuxeo.org/nxweb/util"
   xmlns:nxd="http://nuxeo.org/nxweb/document"
-  xmlns:s="http://jboss.com/products/seam/taglib" class="dropzone">
+  xmlns:s="http://jboss.com/products/seam/taglib" class="dropzone" context="Clipboard">
   <c:if test="#{clipboardActions.initialized}">
 
 
