NXP-6689 Improve UI and add refresh

--- a/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/dnd/dnd-ui.xhtml
+++ b/nuxeo-platform-webapp/src/main/resources/web/nuxeo.war/incl/dnd/dnd-ui.xhtml
@@ -46,4 +46,11 @@
     </table>
   </div>
 
+  <div id="dndContinueButton">
+     <nxu:graphicImage value="/img/ImportContinue.png"
+      style="vertical-align:middle"
+      alt="#{messages['import.continue']}"
+      title="#{messages['import.continue']}"/>
+  </div>
+
 </div>
