NXCM-345 : rename "type" widget with a less generic name; fix selenium tests

--- a/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testDocumentRouteCreation.html
+++ b/nuxeo-platform-document-routing-distribution/ftest/selenium/tests/documents/testDocumentRouteCreation.html
@@ -330,7 +330,7 @@
 </tr>
 <tr>
 	<td>select</td>
-	<td>document_create:nxl_step_folder:nxw_type</td>
+	<td>document_create:nxl_step_folder:nxw_execution_type</td>
 	<td>label=parallel</td>
 </tr>
 <tr>
@@ -470,7 +470,7 @@
 </tr>
 <tr>
 	<td>select</td>
-	<td>document_create:nxl_step_folder:nxw_type</td>
+	<td>document_create:nxl_step_folder:nxw_execution_type</td>
 	<td>label=parallel</td>
 </tr>
 <tr>
